@@ -20,6 +20,8 @@ Current Version (SVN branch-5-0)
 - maprasterquery.c: Fix crash when queryies on done on raster layers with 
   no styles (#2343)
 
+- Improve out of memory handling in mapdrawgdal.c, and mapgd.c. (#2351)
+
 Version 5.0.0 (2007-09-17)
 --------------------------
 
